# universal-etl

./: Makefile  README.md  pyproject.toml  requirements-build.txt  requirements-format.txt  requirements-lint.txt  requirements-test.txt  requirements.txt  tox.ini
tests/universal_etl/: test_is_alive.py
